--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build": "webpack",
     "start": "node server.js",
-    "start:dev" : "npm run build && npm run start"
+    "start:dev": "webpack-dev-server --open"
   },
   "dependencies": {
     "express": "^4.17.1"
@@ -12,9 +12,11 @@
   "description": "Tere Hallo\r App URL= https://merilinrp2019.herokuapp.com/",
   "main": "lesson1.js",
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.4",
     "webpack": "^4.40.2",
-    "webpack-cli": "^3.3.9"
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.1"
   },
   "repository": {
     "type": "git",
