--- a/package.json
+++ b/package.json
@@ -25,10 +25,14 @@
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.4",
+    "css-loader": "^3.2.0",
     "eslint": "^6.5.0",
     "eslint-loader": "^3.0.2",
     "eslint-plugin-react": "^7.14.3",
+    "loader": "^2.1.1",
     "prop-types": "^15.7.2",
+    "style": "0.0.3",
+    "style-loader": "^1.0.0",
     "webpack": "^4.40.2",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.1"
