--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-dom": "^16.9.0",
     "react-icons": "^3.8.0",
     "react-router-dom": "^5.1.2",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "typeface-lobster": "0.0.72",
+    "typeface-roboto": "0.0.75"
   },
   "description": "Tere Hallo\r App URL= https://merilinrp2019.herokuapp.com/",
   "main": "lesson1.js",
@@ -34,11 +36,12 @@
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.0.4",
+    "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.2.0",
     "eslint": "^6.5.0",
     "eslint-loader": "^3.0.2",
     "eslint-plugin-react": "^7.14.3",
+    "file-loader": "^5.0.2",
     "loader": "^2.1.1",
     "prop-types": "^15.7.2",
     "style": "0.0.3",
