--- a/swagger/default.yaml
+++ b/swagger/default.yaml
@@ -8,7 +8,21 @@ servers:
 security: 
   - bearerAuth: []
 paths:
-
+  /items:
+      get:
+        operationId: getItems
+        summary: Returns a list of items
+        responses:
+          200:
+            description: OK
+            content:
+              application/json:
+                schema:
+                  type: array
+                  items:
+                    $ref: "#/components/schemas/Item"
+          500:
+            description: Error
   /items/{itemId}:
       get:
         operationId: getItem
@@ -22,11 +36,8 @@ paths:
               application/json:
                 schema:
                   $ref: "#/components/schemas/Item"
-          403:
-            description: Forbidden
           500:
             description: Error
-
   /users/{userId}:
     get:
       operationId: getUser
@@ -78,7 +89,7 @@ paths:
         500:
           description: err
   
-  /login:
+  /auth/login:
     post:
       operationId: login
       summary: User signs in
@@ -117,7 +128,7 @@ paths:
           description: bad email or password
         401:
           description: unauthorized
-  /signup:
+  /auth/signup:
     post:
       operationId: signup
       summary: User makes an account
